- [2026-02-20 16:30] FEAT: 配置迁移至数据库，前端新增系统配置页面，移除 .env 依赖 (Files: src/xhs_agent/db.py, src/xhs_agent/config.py, src/xhs_agent/api/router.py, src/xhs_agent/services/text_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/services/notification_service.py, src/xhs_agent/services/manager_service.py, frontend/src/types.ts, frontend/src/api.ts, frontend/src/App.tsx, docker-compose.yml)
- [2026-02-20 14:00] CHORE: 降级 Python 要求至 3.12，重新生成 uv.lock (Files: .python-version, pyproject.toml, uv.lock)
- [2026-02-20 13:50] CHORE: Dockerfile 改为多阶段构建，集成前端构建，全面使用国内加速源 (Files: Dockerfile)
- [2026-02-20 13:30] CHORE: 添加 Docker 支持，移除 playwright 生产依赖 (Files: Dockerfile, docker-compose.yml, .dockerignore, pyproject.toml)
- [2026-02-20 12:54] FEAT: 多风格图片生成架构重构，支持 photo/poster 两种风格，AI 自动决策，并发独立生成每张图片 (Files: src/xhs_agent/api/schemas.py, src/xhs_agent/services/image_service.py, src/xhs_agent/services/text_service.py, src/xhs_agent/services/goal_service.py)
- [2026-02-20 14:40] FIX: 改进用户信息获取的错误处理，添加详细日志帮助诊断 Cookie 问题 (Files: src/xhs_agent/services/upload_service.py, src/xhs_agent/services/xhs_http.py)
- [2026-02-20 14:33] FIX: 修复 Cookie 域名设置问题，确保对所有小红书子域名有效；优化创作者中心 API 错误处理 (Files: src/xhs_agent/services/upload_service.py)
- [2026-02-20 14:27] FEAT: 集成 WxPusher 通知系统，支持笔记发布成功/失败通知 (Files: pyproject.toml, .env.example, src/xhs_agent/config.py, src/xhs_agent/services/notification_service.py, src/xhs_agent/services/goal_service.py)
- [2026-02-20 14:04] CHORE: 更新 .gitignore，忽略数据库文件、macOS 文件和环境配置文件 (Files: .gitignore)
- [2026-02-20 14:04] FEAT: XhsHttpClient 补全 API 接口：搜索笔记、笔记详情、评论、子评论、短链接、首页推荐 (Files: src/xhs_agent/services/xhs_http.py)
- [2026-02-20 14:04] FEAT: 优化图片提示词规则为"手机误拍感快照"风格，约100字详细描述 (Files: src/xhs_agent/services/text_service.py)
- [2026-02-20 14:04] CHORE: 添加 tenacity 依赖，清理旧 js/ 目录文件 (Files: pyproject.toml, uv.lock, js/)
- [2026-02-20 13:53] FIX: 修复 update_goal SQL 事务一致性问题，检查第一个 UPDATE 是否成功后再执行第二个 UPDATE (Files: src/xhs_agent/services/goal_service.py)